# Generated by Django 3.1.7 on 2021-04-16 10:23

from django.conf import settings
import django.contrib.gis.db.models.fields
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='AgentResults',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
            ],
            options={
                'db_table': 'AgentResults',
            },
        ),
        migrations.CreateModel(
            name='AgentRoadPath',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
            ],
            options={
                'db_table': 'AgentRoadPath',
            },
        ),
        migrations.CreateModel(
            name='EdgeResults',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
            ],
            options={
                'db_table': 'EdgesResutls',
            },
        ),
        migrations.CreateModel(
            name='NodeResults',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
            ],
            options={
                'db_table': 'NodeResults',
            },
        ),
        migrations.CreateModel(
            name='ODMatrix',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('public', models.BooleanField(default=False)),
                ('size', models.IntegerField()),
                ('locked', models.BooleanField(default=False)),
                ('name', models.CharField(max_length=200, verbose_name='Name of the instance')),
                ('comment', models.TextField()),
                ('tags', models.TextField()),
            ],
            options={
                'db_table': 'ODMatrix',
            },
        ),
        migrations.CreateModel(
            name='Population',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('generated', models.BooleanField()),
                ('random_seed', models.IntegerField(default=7)),
            ],
            options={
                'db_table': 'Population',
            },
        ),
        migrations.CreateModel(
            name='Project',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('public', models.BooleanField(default=False)),
                ('name', models.CharField(max_length=200, verbose_name='Project Name')),
                ('comment', models.TextField()),
                ('owner', models.ManyToManyField(to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'Project',
            },
        ),
        migrations.CreateModel(
            name='RoadNetwork',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('public', models.BooleanField(default=False)),
                ('simple', models.BooleanField(default=False)),
                ('locked', models.BooleanField(default=False)),
                ('nb_nodes', models.IntegerField()),
                ('nb_edges', models.IntegerField()),
                ('name', models.CharField(max_length=200, verbose_name='Network Name')),
                ('comment', models.TextField()),
                ('tags', models.TextField()),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='metro_app.project')),
            ],
            options={
                'db_table': 'RoadNetWork',
            },
        ),
        migrations.CreateModel(
            name='Run',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
            ],
            options={
                'db_table': 'Run',
            },
        ),
        migrations.CreateModel(
            name='Zone',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('centroid', django.contrib.gis.db.models.fields.PointField(srid=4326)),
                ('geometry', django.contrib.gis.db.models.fields.PolygonField(srid=4326)),
                ('radius', models.FloatField()),
                ('name', models.CharField(max_length=200, verbose_name='Zone Name')),
            ],
            options={
                'db_table': 'Zone',
            },
        ),
        migrations.CreateModel(
            name='RoadType',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=200, verbose_name='Network Name')),
                ('congestion', models.IntegerField(choices=[(1, 1), (2, 2)], default=1)),
                ('default_speed', models.FloatField(default=50)),
                ('default_lanes', models.SmallIntegerField(default=1)),
                ('default_param1', models.FloatField(default=1)),
                ('default_param2', models.FloatField(default=1)),
                ('default_param3', models.FloatField(default=3)),
                ('network', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='roads_type_network', to='metro_app.roadnetwork')),
            ],
            options={
                'db_table': 'RoadType ',
            },
        ),
        migrations.CreateModel(
            name='Preferences',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('public', models.BooleanField(default=False)),
                ('locked', models.BooleanField(default=False)),
                ('name', models.CharField(max_length=200, verbose_name='Name of the instance')),
                ('comment', models.TextField()),
                ('tags', models.TextField()),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='preferences_project', to='metro_app.project')),
            ],
            options={
                'db_table': 'Preferences',
            },
        ),
        migrations.CreateModel(
            name='PopulationSegment',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('preferences', models.IntegerField()),
                ('od_matrix', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='opulationsegments_od_matrix', to='metro_app.odmatrix')),
                ('population', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='population_segment', to='metro_app.population')),
            ],
            options={
                'db_table': 'PopulationSegment',
            },
        ),
        migrations.CreateModel(
            name='ParameterSet',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('public', models.BooleanField(default=False)),
                ('period_start', models.TimeField(verbose_name='Period Start')),
                ('period_end', models.TimeField(verbose_name='Period Start')),
                ('period_interval', models.DurationField(default=5)),
                ('learn_process', models.CharField(choices=[(1, 'exponential'), (2, 'linear'), (3, 'quadratic'), (4, 'genetic')], max_length=100)),
                ('learn_param', models.FloatField()),
                ('iter_check', models.BooleanField(default=False)),
                ('iter_value', models.SmallIntegerField()),
                ('converg_check', models.BooleanField(default=False)),
                ('converg_value', models.FloatField()),
                ('spillback_enable', models.BooleanField()),
                ('spillback_value', models.FloatField()),
                ('locked', models.BooleanField(default=False)),
                ('name', models.CharField(max_length=200, verbose_name='Name of the instance')),
                ('comment', models.TextField()),
                ('tags', models.TextField()),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='metro_app.project')),
            ],
            options={
                'db_table': 'ParameterSet',
            },
        ),
        migrations.CreateModel(
            name='ODPair',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('size', models.IntegerField()),
                ('destination', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='odpairs_destination', to='metro_app.zone')),
                ('matrix', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='odpairs_matrix', to='metro_app.odmatrix')),
                ('origin', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='odpairs_origin', to='metro_app.zone')),
            ],
            options={
                'db_table': 'ODPair',
            },
        ),
        migrations.AddField(
            model_name='odmatrix',
            name='project',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='odmatrix_project', to='metro_app.project'),
        ),
        migrations.CreateModel(
            name='Node',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('node_id', models.IntegerField()),
                ('name', models.TextField()),
                ('geometry', django.contrib.gis.db.models.fields.PointField(srid=4326)),
                ('network', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='metro_app.roadnetwork')),
            ],
            options={
                'db_table': 'Node',
            },
        ),
        migrations.CreateModel(
            name='File',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('public', models.BooleanField(default=False)),
                ('title', models.CharField(max_length=200, verbose_name='File Title')),
                ('location', models.CharField(max_length=300, verbose_name='File Location')),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='file_project', to='metro_app.project')),
            ],
            options={
                'db_table': 'File',
            },
        ),
        migrations.CreateModel(
            name='Edge',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('param1', models.FloatField()),
                ('param2', models.FloatField()),
                ('param3', models.FloatField()),
                ('speed', models.FloatField()),
                ('lenth', models.FloatField()),
                ('lanes', models.SmallIntegerField()),
                ('geometry', django.contrib.gis.db.models.fields.LineStringField(null=True, srid=4326)),
                ('name', models.CharField(max_length=200, verbose_name='Edge Name')),
                ('network', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='edges_network', to='metro_app.roadnetwork')),
                ('road_type', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='edges_road_type', to='metro_app.roadtype')),
                ('source', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='edges_source', to='metro_app.node')),
                ('target', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='edges_target', to='metro_app.node')),
            ],
            options={
                'db_table': 'Edges',
            },
        ),
    ]
